# Rust_IDE

./: Cargo.toml  README.md  Readme.md  openzip.py  output.txt
Rust_Project/: Cargo.toml
Rust_Project/src/: main.rs
dummy/: Cargo.toml
dummy/src/: main.rs
src/: main.rs  output.txt
src/Rust_Project/: Cargo.toml
