[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower = "0.4"
futures = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.4", features = ["cors"] }
tokio-util = "0.7.15"

