[package]
name = "rust_cli_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2.4"
syntect = { version = "5", features = ["default", "html"] }




